Fixes and Updates  - Composer 7.4;  - Login and Forgotten page updates;  - Added scrollbar styling;

--- a/public/admin/view/stylesheet/stylesheet.css
+++ b/public/admin/view/stylesheet/stylesheet.css
@@ -35,3 +35,6 @@
 .fa-2x {
     font-size: 20px;
 }
+.note-sm {
+    font-size: 12px !important;
+}
